boxddd-sys/third-party/box3d/include/box3d/box3d.h

/// Shape identifier validation. Provides validation for up to 64K allocations.
B3_API bool b3Shape_IsValid( b3ShapeId id );
/**@}*/ // wheel_joint

/**@}*/ // joint

/**
 * @defgroup contact Contact
 * Access to contacts
 * @{
 */

/// Contact identifier validation. Provides validation for up to 2^32 allocations.
B3_API bool b3Contact_IsValid( b3ContactId id );