boxddd-sys/third-party/box3d/include/box3d/types.h

/// Base joint definition used by all joint types. The local frames are measured from the
/// body's origin rather than the center of mass because:
/// 1. You might not know where the center of mass will be.
/// 2. If you add/remove shapes from a body and recompute the mass, the joints will be broken.
/// @ingroup joint
typedef struct b3JointDef
{
	/// User data pointer
	void* userData;

	/// The first attached body
	b3BodyId bodyIdA;

	/// The second attached body
	b3BodyId bodyIdB;

	/// The first local joint frame
	b3Transform localFrameA;

	/// The second local joint frame
	b3Transform localFrameB;

	/// Force threshold for joint events
	float forceThreshold;

	/// Torque threshold for joint events
	float torqueThreshold;

	/// Constraint hertz (advanced feature)
	float constraintHertz;

	/// Constraint damping ratio (advanced feature)
	float constraintDampingRatio;

	/// Debug draw scale
	float drawScale;

	/// Set this flag to true if the attached bodies should collide
	bool collideConnected;

	/// Used internally to detect a valid definition. DO NOT SET.
	int internalValue;
} b3JointDef;
/// Prismatic joint definition. Body B may slide along the x-axis in local frame A.
/// Body B cannot rotate relative to body A. The joint translation is zero when the
/// local frame origins coincide in world space.
/// @ingroup prismatic_joint
typedef struct b3PrismaticJointDef
{
	/// Base joint definition
	b3JointDef base;

	/// Enable a linear spring along the prismatic joint axis
	bool enableSpring;

	/// The spring stiffness Hertz, cycles per second
	float hertz;

	/// The spring damping ratio, non-dimensional
	float dampingRatio;

	/// The target translation for the joint in meters. The spring-damper will drive
	/// to this translation.
	float targetTranslation;

	/// Enable/disable the joint limit
	bool enableLimit;

	/// The lower translation limit
	float lowerTranslation;

	/// The upper translation limit
	float upperTranslation;

	/// Enable/disable the joint motor
	bool enableMotor;

	/// The maximum motor force, typically in newtons
	float maxMotorForce;

	/// The desired motor speed, typically in meters per second
	float motorSpeed;
} b3PrismaticJointDef;
/// Use this to initialize your joint definition
/// @ingroup prismatic_joint
B3_API b3PrismaticJointDef b3DefaultPrismaticJointDef( void );
/// Revolute joint definition. A point on body B is fixed to a point on body A.
/// Allows relative rotation about the z-axis.
/// @ingroup revolute_joint
typedef struct b3RevoluteJointDef
{
	/// Base joint definition.
	b3JointDef base;

	/// The bodyB angle minus bodyA angle in the reference state (radians).
	/// This defines the zero angle for the joint limit.
	float targetAngle;

	/// Enable a rotational spring on the revolute hinge axis.
	bool enableSpring;

	/// The spring stiffness Hertz, cycles per second.
	float hertz;

	/// The spring damping ratio, non-dimensional.
	float dampingRatio;

	/// A flag to enable joint limits.
	bool enableLimit;

	/// The lower angle for the joint limit in radians. Minimum of -0.99*pi radians.
	float lowerAngle;

	/// The upper angle for the joint limit in radians. Maximum of 0.99*pi radians.
	float upperAngle;

	/// A flag to enable the joint motor.
	bool enableMotor;

	/// The maximum motor torque, typically in newton-meters.
	float maxMotorTorque;

	/// The desired motor speed in radians per second.
	float motorSpeed;
} b3RevoluteJointDef;
/// Use this to initialize your joint definition.
/// @ingroup revolute_joint
B3_API b3RevoluteJointDef b3DefaultRevoluteJointDef( void );
/// Spherical joint definition. A point on body B is fixed to a point on body A.
/// Allows rotation about the shared point.
/// @ingroup spherical_joint
typedef struct b3SphericalJointDef
{
	/// Base joint definition
	b3JointDef base;

	/// Enable a rotational spring that attempts to align the two joint frames.
	bool enableSpring;

	/// The spring stiffness Hertz, cycles per second. This may be clamped internally
	/// according to the time step to maintain stability. Non-negative number.
	float hertz;

	/// The spring damping ratio, non-dimensional. Non-negative number.
	float dampingRatio;

	/// Target spring rotation, joint frame B relative to joint frame A.
	b3Quat targetRotation;

	/// A flag to enable the cone limit. The cone is centered on the frameA z-axis.
	bool enableConeLimit;

	/// The angle for the cone limit in radians. Valid range is [0, pi]
	float coneAngle;

	/// A flag to enable the twist limit. The twist is centered on the frameB z-axis.
	bool enableTwistLimit;

	/// The angle for the lower twist limit in radians. Minimum of -0.99*pi radians.
	float lowerTwistAngle;

	/// The angle for the upper twist limit in radians. Maximum of 0.99*pi radians.
	float upperTwistAngle;

	/// A flag to enable the joint motor
	bool enableMotor;

	/// The maximum motor torque, typically in newton-meters. Non-negative number.
	float maxMotorTorque;

	/// The desired motor angular velocity in radians per second.
	b3Vec3 motorVelocity;
} b3SphericalJointDef;
/// Use this to initialize your joint definition.
/// @ingroup spherical_joint
B3_API b3SphericalJointDef b3DefaultSphericalJointDef( void );
/// Weld joint definition
/// Connects two bodies together rigidly. This constraint provides springs to mimic
/// soft-body simulation.
/// @note The approximate solver in Box3D cannot hold many bodies together rigidly
/// @ingroup weld_joint
typedef struct b3WeldJointDef
{
	/// Base joint definition
	b3JointDef base;

	/// Linear stiffness expressed as Hertz (cycles per second). Use zero for maximum stiffness.
	float linearHertz;

	/// Angular stiffness as Hertz (cycles per second). Use zero for maximum stiffness.
	float angularHertz;

	/// Linear damping ratio, non-dimensional. Use 1 for critical damping.
	float linearDampingRatio;

	/// Linear damping ratio, non-dimensional. Use 1 for critical damping.
	float angularDampingRatio;
} b3WeldJointDef;
/// Use this to initialize your joint definition
/// @ingroup weld_joint
B3_API b3WeldJointDef b3DefaultWeldJointDef( void );
/// Wheel joint definition
/// Body A is the chassis and body B is the wheel.
/// The wheel rotates around the local z-axis in frame B.
/// The wheel translates along the local x-axis in frame A.
/// The wheel can optionally steer along the x-axis in frame A.
/// @ingroup wheel_joint
typedef struct b3WheelJointDef
{
	/// Base joint definition
	b3JointDef base;

	/// Enable a linear spring along the local axis
	bool enableSuspensionSpring;

	/// Spring stiffness in Hertz
	float suspensionHertz;

	/// Spring damping ratio, non-dimensional
	float suspensionDampingRatio;

	/// Enable/disable the joint linear limit
	bool enableSuspensionLimit;

	/// The lower suspension translation limit
	float lowerSuspensionLimit;

	/// The upper translation limit
	float upperSuspensionLimit;

	/// Enable/disable the joint rotational motor
	bool enableSpinMotor;

	/// The maximum motor torque, typically in newton-meters
	float maxSpinTorque;

	/// The desired motor speed in radians per second
	float spinSpeed;

	/// Enable steering, otherwise the steering is fixed forward
	bool enableSteering;

	/// Steering stiffness in Hertz
	float steeringHertz;

	/// Spring damping ratio, non-dimensional
	float steeringDampingRatio;

	/// The target steering angle in radians
	float targetSteeringAngle;

	/// The maximum steering torque in N*m
	float maxSteeringTorque;

	/// Enable/disable the steering angular limit
	bool enableSteeringLimit;

	/// The lower steering angle in radians
	float lowerSteeringLimit;

	/// The upper steering angle in radians
	float upperSteeringLimit;
} b3WheelJointDef;
/// Use this to initialize your joint definition
/// @ingroup wheel_joint
B3_API b3WheelJointDef b3DefaultWheelJointDef( void );
/// The explosion definition is used to configure options for explosions. Explosions
/// consider shape geometry when computing the impulse.
/// @ingroup world
typedef struct b3ExplosionDef
{
	/// Mask bits to filter shapes
	uint64_t maskBits;

	/// The center of the explosion in world space
	b3Pos position;

	/// The radius of the explosion
	float radius;

	/// The falloff distance beyond the radius. Impulse is reduced to zero at this distance.
	float falloff;

	/// Impulse per unit area. This applies an impulse according to the shape area that
	/// is facing the explosion. Explosions only apply to spheres, capsules, and hulls. This
	/// may be negative for implosions.
	float impulsePerArea;
} b3ExplosionDef;
/// Use this to initialize your explosion definition
/// @ingroup world
B3_API b3ExplosionDef b3DefaultExplosionDef( void );
/**
 * @defgroup event Events
 * World event types.
 *
 * Events are used to collect events that occur during the world time step. These events
 * are then available to query after the time step is complete. This is preferable to callbacks
 * because Box3D uses multithreaded simulation.
 *
 * Also when events occur in the simulation step it may be problematic to modify the world, which is
 * often what applications want to do when events occur.
 *
 * With event arrays, you can scan the events in a loop and modify the world. However, you need to be careful
 * that some event data may become invalid. There are several samples that show how to do this safely.
 *
 * @{
 */

/// A begin-touch event is generated when a shape starts to overlap a sensor shape.
typedef struct b3SensorBeginTouchEvent
{
	/// The id of the sensor shape
	b3ShapeId sensorShapeId;

	/// The id of the shape that began touching the sensor shape
	b3ShapeId visitorShapeId;
} b3SensorBeginTouchEvent;
/// An end touch event is generated when a shape stops overlapping a sensor shape.
///	These include things like setting the transform, destroying a body or shape, or changing
///	a filter. You will also get an end event if the sensor or visitor are destroyed.
///	Therefore you should always confirm the shape id is valid using b3Shape_IsValid.
typedef struct b3SensorEndTouchEvent
{
	/// The id of the sensor shape
	///	@warning this shape may have been destroyed
	///	@see b3Shape_IsValid
	b3ShapeId sensorShapeId;

	/// The id of the shape that stopped touching the sensor shape
	///	@warning this shape may have been destroyed
	///	@see b3Shape_IsValid
	b3ShapeId visitorShapeId;
} b3SensorEndTouchEvent;
/// Sensor events are buffered in the world and are available
///	as begin/end overlap event arrays after the time step is complete.
///	Note: these may become invalid if bodies and/or shapes are destroyed
typedef struct b3SensorEvents
{
	/// Array of sensor begin touch events
	b3SensorBeginTouchEvent* beginEvents;

	/// Array of sensor end touch events
	b3SensorEndTouchEvent* endEvents;

	/// The number of begin touch events
	int beginCount;

	/// The number of end touch events
	int endCount;
} b3SensorEvents;
/// A begin-touch event is generated when two shapes begin touching.
typedef struct b3ContactBeginTouchEvent
{
	/// Id of the first shape
	b3ShapeId shapeIdA;

	/// Id of the second shape
	b3ShapeId shapeIdB;

	/// The transient contact id. This contact may be destroyed automatically when the world is modified or simulated.
	/// Use b3Contact_IsValid before using this id.
	b3ContactId contactId;
} b3ContactBeginTouchEvent;
/// An end touch event is generated when two shapes stop touching.
///	You will get an end event if you do anything that destroys contacts previous to the last
///	world step. These include things like setting the transform, destroying a body
///	or shape, or changing a filter or body type.
typedef struct b3ContactEndTouchEvent
{
	/// Id of the first shape
	///	@warning this shape may have been destroyed
	///	@see b3Shape_IsValid
	b3ShapeId shapeIdA;

	/// Id of the first shape
	///	@warning this shape may have been destroyed
	///	@see b3Shape_IsValid
	b3ShapeId shapeIdB;

	/// Id of the contact.
	///	@warning this contact may have been destroyed
	///	@see b3Contact_IsValid
	b3ContactId contactId;
} b3ContactEndTouchEvent;