boxddd-sys/src/bindings_pregenerated.rs

/** Prismatic joint definition. Body B may slide along the x-axis in local frame A.
 Body B cannot rotate relative to body A. The joint translation is zero when the
 local frame origins coincide in world space.
 @ingroup prismatic_joint*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3PrismaticJointDef {
    /// Base joint definition
    pub base: b3JointDef,
    /// Enable a linear spring along the prismatic joint axis
    pub enableSpring: bool,
    /// The spring stiffness Hertz, cycles per second
    pub hertz: f32,
    /// The spring damping ratio, non-dimensional
    pub dampingRatio: f32,
    /** The target translation for the joint in meters. The spring-damper will drive
 to this translation.*/
    pub targetTranslation: f32,
    /// Enable/disable the joint limit
    pub enableLimit: bool,
    /// The lower translation limit
    pub lowerTranslation: f32,
    /// The upper translation limit
    pub upperTranslation: f32,
    /// Enable/disable the joint motor
    pub enableMotor: bool,
    /// The maximum motor force, typically in newtons
    pub maxMotorForce: f32,
    /// The desired motor speed, typically in meters per second
    pub motorSpeed: f32,
}
unsafe extern "C" {
    /** Use this to initialize your joint definition
 @ingroup prismatic_joint*/
    pub fn b3DefaultPrismaticJointDef() -> b3PrismaticJointDef;
}
/** Revolute joint definition. A point on body B is fixed to a point on body A.
 Allows relative rotation about the z-axis.
 @ingroup revolute_joint*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3RevoluteJointDef {
    /// Base joint definition.
    pub base: b3JointDef,
    /** The bodyB angle minus bodyA angle in the reference state (radians).
 This defines the zero angle for the joint limit.*/
    pub targetAngle: f32,
    /// Enable a rotational spring on the revolute hinge axis.
    pub enableSpring: bool,
    /// The spring stiffness Hertz, cycles per second.
    pub hertz: f32,
    /// The spring damping ratio, non-dimensional.
    pub dampingRatio: f32,
    /// A flag to enable joint limits.
    pub enableLimit: bool,
    /// The lower angle for the joint limit in radians. Minimum of -0.99*pi radians.
    pub lowerAngle: f32,
    /// The upper angle for the joint limit in radians. Maximum of 0.99*pi radians.
    pub upperAngle: f32,
    /// A flag to enable the joint motor.
    pub enableMotor: bool,
    /// The maximum motor torque, typically in newton-meters.
    pub maxMotorTorque: f32,
    /// The desired motor speed in radians per second.
    pub motorSpeed: f32,
}
unsafe extern "C" {
    /** Use this to initialize your joint definition.
 @ingroup revolute_joint*/
    pub fn b3DefaultRevoluteJointDef() -> b3RevoluteJointDef;
}
/** Spherical joint definition. A point on body B is fixed to a point on body A.
 Allows rotation about the shared point.
 @ingroup spherical_joint*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3SphericalJointDef {
    /// Base joint definition
    pub base: b3JointDef,
    /// Enable a rotational spring that attempts to align the two joint frames.
    pub enableSpring: bool,
    /** The spring stiffness Hertz, cycles per second. This may be clamped internally
 according to the time step to maintain stability. Non-negative number.*/
    pub hertz: f32,
    /// The spring damping ratio, non-dimensional. Non-negative number.
    pub dampingRatio: f32,
    /// Target spring rotation, joint frame B relative to joint frame A.
    pub targetRotation: b3Quat,
    /// A flag to enable the cone limit. The cone is centered on the frameA z-axis.
    pub enableConeLimit: bool,
    /// The angle for the cone limit in radians. Valid range is [0, pi]
    pub coneAngle: f32,
    /// A flag to enable the twist limit. The twist is centered on the frameB z-axis.
    pub enableTwistLimit: bool,
    /// The angle for the lower twist limit in radians. Minimum of -0.99*pi radians.
    pub lowerTwistAngle: f32,
    /// The angle for the upper twist limit in radians. Maximum of 0.99*pi radians.
    pub upperTwistAngle: f32,
    /// A flag to enable the joint motor
    pub enableMotor: bool,
    /// The maximum motor torque, typically in newton-meters. Non-negative number.
    pub maxMotorTorque: f32,
    /// The desired motor angular velocity in radians per second.
    pub motorVelocity: b3Vec3,
}
unsafe extern "C" {
    /** Use this to initialize your joint definition.
 @ingroup spherical_joint*/
    pub fn b3DefaultSphericalJointDef() -> b3SphericalJointDef;
}
/** Weld joint definition
 Connects two bodies together rigidly. This constraint provides springs to mimic
 soft-body simulation.
 @note The approximate solver in Box3D cannot hold many bodies together rigidly
 @ingroup weld_joint*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3WeldJointDef {
    /// Base joint definition
    pub base: b3JointDef,
    /// Linear stiffness expressed as Hertz (cycles per second). Use zero for maximum stiffness.
    pub linearHertz: f32,
    /// Angular stiffness as Hertz (cycles per second). Use zero for maximum stiffness.
    pub angularHertz: f32,
    /// Linear damping ratio, non-dimensional. Use 1 for critical damping.
    pub linearDampingRatio: f32,
    /// Linear damping ratio, non-dimensional. Use 1 for critical damping.
    pub angularDampingRatio: f32,
}
unsafe extern "C" {
    /** Use this to initialize your joint definition
 @ingroup weld_joint*/
    pub fn b3DefaultWeldJointDef() -> b3WeldJointDef;
}
/** Wheel joint definition
 Body A is the chassis and body B is the wheel.
 The wheel rotates around the local z-axis in frame B.
 The wheel translates along the local x-axis in frame A.
 The wheel can optionally steer along the x-axis in frame A.
 @ingroup wheel_joint*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3WheelJointDef {
    /// Base joint definition
    pub base: b3JointDef,
    /// Enable a linear spring along the local axis
    pub enableSuspensionSpring: bool,
    /// Spring stiffness in Hertz
    pub suspensionHertz: f32,
    /// Spring damping ratio, non-dimensional
    pub suspensionDampingRatio: f32,
    /// Enable/disable the joint linear limit
    pub enableSuspensionLimit: bool,
    /// The lower suspension translation limit
    pub lowerSuspensionLimit: f32,
    /// The upper translation limit
    pub upperSuspensionLimit: f32,
    /// Enable/disable the joint rotational motor
    pub enableSpinMotor: bool,
    /// The maximum motor torque, typically in newton-meters
    pub maxSpinTorque: f32,
    /// The desired motor speed in radians per second
    pub spinSpeed: f32,
    /// Enable steering, otherwise the steering is fixed forward
    pub enableSteering: bool,
    /// Steering stiffness in Hertz
    pub steeringHertz: f32,
    /// Spring damping ratio, non-dimensional
    pub steeringDampingRatio: f32,
    /// The target steering angle in radians
    pub targetSteeringAngle: f32,
    /// The maximum steering torque in N*m
    pub maxSteeringTorque: f32,
    /// Enable/disable the steering angular limit
    pub enableSteeringLimit: bool,
    /// The lower steering angle in radians
    pub lowerSteeringLimit: f32,
    /// The upper steering angle in radians
    pub upperSteeringLimit: f32,
}
unsafe extern "C" {
    /** Use this to initialize your joint definition
 @ingroup wheel_joint*/
    pub fn b3DefaultWheelJointDef() -> b3WheelJointDef;
}
/** The explosion definition is used to configure options for explosions. Explosions
 consider shape geometry when computing the impulse.
 @ingroup world*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3ExplosionDef {
    /// Mask bits to filter shapes
    pub maskBits: u64,
    /// The center of the explosion in world space
    pub position: b3Pos,
    /// The radius of the explosion
    pub radius: f32,
    /// The falloff distance beyond the radius. Impulse is reduced to zero at this distance.
    pub falloff: f32,
    /** Impulse per unit area. This applies an impulse according to the shape area that
 is facing the explosion. Explosions only apply to spheres, capsules, and hulls. This
 may be negative for implosions.*/
    pub impulsePerArea: f32,
}
unsafe extern "C" {
    /** Use this to initialize your explosion definition
 @ingroup world*/
    pub fn b3DefaultExplosionDef() -> b3ExplosionDef;
}
/// A begin-touch event is generated when a shape starts to overlap a sensor shape.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3SensorBeginTouchEvent {
    /// The id of the sensor shape
    pub sensorShapeId: b3ShapeId,
    /// The id of the shape that began touching the sensor shape
    pub visitorShapeId: b3ShapeId,
}
/** An end touch event is generated when a shape stops overlapping a sensor shape.
	These include things like setting the transform, destroying a body or shape, or changing
	a filter. You will also get an end event if the sensor or visitor are destroyed.
	Therefore you should always confirm the shape id is valid using b3Shape_IsValid.*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3SensorEndTouchEvent {
    /** The id of the sensor shape
	@warning this shape may have been destroyed
	@see b3Shape_IsValid*/
    pub sensorShapeId: b3ShapeId,
    /** The id of the shape that stopped touching the sensor shape
	@warning this shape may have been destroyed
	@see b3Shape_IsValid*/
    pub visitorShapeId: b3ShapeId,
}
/** Sensor events are buffered in the world and are available
	as begin/end overlap event arrays after the time step is complete.
	Note: these may become invalid if bodies and/or shapes are destroyed*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3SensorEvents {
    /// Array of sensor begin touch events
    pub beginEvents: *mut b3SensorBeginTouchEvent,
    /// Array of sensor end touch events
    pub endEvents: *mut b3SensorEndTouchEvent,
    /// The number of begin touch events
    pub beginCount: ::std::os::raw::c_int,
    /// The number of end touch events
    pub endCount: ::std::os::raw::c_int,
}
/// A begin-touch event is generated when two shapes begin touching.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3ContactBeginTouchEvent {
    /// Id of the first shape
    pub shapeIdA: b3ShapeId,
    /// Id of the second shape
    pub shapeIdB: b3ShapeId,
    /** The transient contact id. This contact may be destroyed automatically when the world is modified or simulated.
 Use b3Contact_IsValid before using this id.*/
    pub contactId: b3ContactId,
}
/** An end touch event is generated when two shapes stop touching.
	You will get an end event if you do anything that destroys contacts previous to the last
	world step. These include things like setting the transform, destroying a body
	or shape, or changing a filter or body type.*/
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct b3ContactEndTouchEvent {
    /** Id of the first shape
	@warning this shape may have been destroyed
	@see b3Shape_IsValid*/
    pub shapeIdA: b3ShapeId,
    /** Id of the first shape
	@warning this shape may have been destroyed
	@see b3Shape_IsValid*/
    pub shapeIdB: b3ShapeId,
    /** Id of the contact.
	@warning this contact may have been destroyed
	@see b3Contact_IsValid*/
    pub contactId: b3ContactId,
}
